Mon Jul 19 12:20:58 1993  Gray Watson  (gray at toaster.antaire.com)

	* Removed the dblock checking tokens CHECK_DBLOCK and
	CHECK_DB_FENCE for a couple different reasons.  I never liked them
	anyway!  I also renumbered CHECK_FREE and CHECK_FUNCS in the
	process.

	* Fixed a number of int/long problems since Dave Hill is running
	malloc on a 64 bit alpha.

	* Made a number of changes to the configure scripts and conf.h per
	Dave Hill's comments.  Added BASIC_BLOCK and ALLOCATION_ALIGNMENT
	to the auto-config stuff.

Fri Jul 16 00:01:31 1993  Gray Watson  (gray at toaster.antaire.com)

	* Changed malloc_dbg per new ARGV_MAYBE.  Made some various
	changes from ints to longs per some useful comments from Dave.

Tue Jul 13 01:53:32 1993  Gray Watson  (gray@fridge.antaire.com)

	* Version 1.2.6 released.

	* Posting to bsdi.  Last minute porting changes.

Mon Jul 12 02:03:25 1993  Gray Watson  (gray at toaster.antaire.com)

	* Finished new catch-null token.

Tue Jul  6 16:04:17 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added 'catch-null' token for quiting as soon as we get a sbrk
	failure (i.e. the swap is full or something) as opposed to
	returning NULL.

Sat Jun 19 14:49:42 1993  Gray Watson  (gray at toaster.antaire.com)

	* Minor changes to configuration and notes files.

Tue Jun 15 10:29:13 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.5.

	* Made some last minute changes to the manual.

Wed Jun  9 15:12:21 1993  Gray Watson  (gray at toaster.antaire.com)

	* Fixed small malloc_dbg token bug from Peter Miller.

Thu Jun  3 16:01:14 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added index to manual, removed shar files in place of Makefile
	variables.

Mon May 24 12:58:06 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added -r and -k options for auto-unseting of variables or
	keeping of variables with malloc_dbg when setting a tag.

	* Added const checking to configure and reordered some include